# pmc-python

./: README.md  extract_from_ftp.py  extract_from_tar.py  pyproject.toml  sample_output.md  test_markdown.py
scripts/: cluster_embeddings.py  create_concepts.py  create_embeddings.py  eval_qa.py  search.py  synthesize_qa.py
src/pmc_python/: __init__.py  markdown.py  metadata.py  reference.py  search.py  table.py  text.py  utils.py
